--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,6 +240,14 @@ input {
 	font-size: 50px;
 }
 
+#h .figcap h2{
+	position: absolute;
+	color:white;
+	top:90%;
+	left: 70%;
+	font-size: 20px;
+}
+
 /* GREY SECTION */
 #g {
 	padding-top: 50px;
