--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,21 +232,18 @@ input {
 	letter-spacing: 1px;
 }
 
-#h h3 {
+/*#h h3 {
 	margin-top: 10px;
-}
+	position: relative;
+	bottom:0;
+	right:0;
+	text-align: right;
+}*/
 
 #h i {
 	font-size: 50px;
 }
 
-#h .figcap h2{
-	position: absolute;
-	color:white;
-	top:90%;
-	left: 70%;
-	font-size: 20px;
-}
 
 /* GREY SECTION */
 #g {
