--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,13 +232,19 @@ input {
 	letter-spacing: 1px;
 }
 
-/*#h h3 {
+#h h3 {
 	margin-top: 10px;
 	position: relative;
 	bottom:0;
 	right:0;
 	text-align: right;
-}*/
+}
+
+#header-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 
 #h i {
 	font-size: 50px;
