update coloring for mobile devices

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -157,6 +157,27 @@ a:focus {
     background-color: rgba(255,255,255,0.8);
 }
 
+@media(max-width: 767px){
+    .navbar-custom a {
+        color: white;
+    }
+
+    .navbar-custom .nav .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: rgba(0,0,0,1);
+        min-width: 160px;
+        border-spacing: 0px;
+        /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+        z-index: 1;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: flex;
+        /*animation: css 0s 3s forwards; */
+    }
+}
+
 
 @media(min-width:767px) {
     .navbar {
