--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     {% include header.html %}
     {% include portfolio.html %}
     {% include map.html%}
-    {% include tools.html %}
+    <!-- {% include tools.html %} -->
     {% include contact.html %}
     {% include footer.html %}
     {% include js.html %}
