removing some buttons

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -39,11 +39,11 @@
                         <a class="page-scroll" href="#tools">Tools</a>
                     
                             <div class="dropdown-content">
-                                <p><a href="https://github.com/BenjiDa/xrd_analyzer">XRD Analyser</a></p> <!-- teal color:#00FFFF" -->
+                                <p><a href="https://github.com/BenjiDa/xrd_analyzer">XRD Analyser</a></p> teal color:#00FFFF" -->
 <!--                                 <p><a href="https://github.com/BenjiDa/fractal_finder">Fractal finder</a></p>
                                 <p><a href="/flowstress">Flowstress calculator</a></p>
                             </div>
-                    </li> --> -->
+                    </li> --> 
 
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
