removing unwated items

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,8 +10,8 @@
             <div class="col-lg-6 col-lg-offset-3">
                 <h2>Contact</h2>
                 <!-- <p>...</p> -->
-                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
-                </p>
+                <!-- <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                </p> -->
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
                     <li>
