trying some things

--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -9,7 +9,7 @@
         </div>
     </div>
 
-<!--     <section class="container tools-section tools-section text-center">
+    <section class="container tools-section tools-section text-center">
 
                 <ul class="list-inline banner-social-buttons img-overlay">
                     {% for network in site.tools %}
@@ -19,7 +19,7 @@
                     {% endfor %}
                 </ul>
                 
-    </section> -->
+    </section>
 
     <style type="text/css">
 
