--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -1,5 +1,5 @@
     <!-- Tools Section -->
-    <div id="tools" class="container content-section text-center" style="padding-bottom: 0px;" >
+<!--     <div id="tools" class="container content-section text-center" style="padding-bottom: 0px;" >
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Tools</h2>
@@ -28,4 +28,4 @@
             color: {{ site.color.links }};
             background-color: rgba(0,0,0,0.5);
         }
-    </style>
+    </style> -->
