--- a/_includes/map.html
+++ b/_includes/map.html
@@ -6,7 +6,7 @@
 
     <!-- <div id="map"></div> -->
 
-<style>
+<!-- <style>
    
     
     #comparison-container{
@@ -46,3 +46,4 @@
         <div id="before" class="map"></div>
         <div id="after" class="map"></div>
 </div>
+ -->
