--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
                     </li>
 
                     <li class="dropdown">
-                        <a class="page-scroll" href="#map-loc">Maps</a>
+                        <a class="page-scroll">Maps</a>
                             <div class="dropdown-content" id="dropdown-content">
                                 <p><a href="https://benjida.github.io/North-coast-earthquake-map/" target="_blank">Northern California earthquakes</a></p> <!-- teal color:#00FFFF" -->
                                 <p><a href="/3d_model" target="_blank">3D Cow Mountain</a></p>
