--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -235,12 +235,14 @@ a:focus {
     text-align: center;
     color: #fff;
     background: linear-gradient(#00000000 85%, #000000 100%), url(/img/intro-bg.jpg) no-repeat bottom center scroll;
-    background-clip: border-box;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    width: 160px;
+    height: 160px;
+    resize: both;
 }
 
 .intro .intro-body {
