--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -238,7 +238,8 @@ a:focus {
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     -o-background-size: cover;
     width: 160px;
     height: 160px;
