--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -231,19 +231,15 @@ a:focus {
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 0px 0;
     text-align: center;
     color: #fff;
     background: linear-gradient(#00000000 85%, #000000 100%), url(/img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-size: cover;
     -o-background-size: cover;
-    width: 160px;
-    height: 160px;
-    resize: both;
 }
 
 .intro .intro-body {
