--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -231,7 +231,7 @@ a:focus {
     display: table;
     width: 100%;
     height: auto;
-    padding: 0px 0;
+    padding: 100px 100px;
     text-align: center;
     color: #fff;
     background: linear-gradient(#00000000 85%, #000000 100%), url(/img/intro-bg.jpg) no-repeat bottom center scroll;
