--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -234,7 +234,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: linear-gradient(#00000000 85%, #000000 100%), url(/img/intro-bg-clip.png) no-repeat bottom center scroll;
+    background: linear-gradient(#00000000 85%, #000000 100%), url(/img/intro-bg-clip.png) no-repeat center center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
