--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -230,11 +230,11 @@ a:focus {
 .intro {
     display: table;
     width: 100%;
-    height: auto;
+    height: 100%;
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: linear-gradient(#00000000 85%, #000000 100%), url(/img/cr-view-bw.jpg) no-repeat top center scroll;
+    background: linear-gradient(#00000000 85%, #000000 100%), url(/img/intro-bg-clip.png) no-repeat top center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
