--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,6 +2,13 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+                <!-- <h2>Name</h2> -->
+                <p>Ben Melosh, PhD</p>
+                <!-- <p>The Jekyll version is brought to you by <a href="https://github.com/jeromelachaud">Jerome Lachaud</a></p> -->
+            
+            </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p>A portfolio of recent projects.</p>
                 <!-- <p>The Jekyll version is brought to you by <a href="https://github.com/jeromelachaud">Jerome Lachaud</a></p> -->
